# projet_nlp_ner_2025

./: Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
notebooks/: base_init.ipynb
proj_nlp/Scripts/: activate  activate.bat
