[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "projet_nlp_ner_2025"
version = "0.0.1"
description = "modele de reconnaissance d'entit\u00e9 norm\u00e9e"
authors = [
  { name = "sekou_safietou_baba" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["projet_nlp_ner_2025"]
force_sort_within_sections = true
